Add static Open Graph image and update meta tags for social previews

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta property="og:description" content="Student, Developer, and Stockbroker" />
     <meta property="og:type" content="website" />
 
+    <!-- Open Graph image for social previews (Discord, Slack, Twitter) -->
+    <meta property="og:image" content="/og-image.svg" />
+    <meta property="og:image:alt" content="Jed Blenkhorn — portfolio homepage" />
+    <meta property="og:url" content="/" />
+    <meta name="twitter:image" content="/og-image.svg" />
+
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@jedbillyb09" />
 
